--- a/main.html
+++ b/main.html
@@ -7,6 +7,44 @@
 </head>
 
 <body>
+	<table style="border: 1px solid bisque" border="2px">
+		<thead>
+			<tr>
+				<th>Roll Number</th>
+				<th>Name</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>Ayan</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>Atyab</td>
+			</tr>
+			<tr>
+				<td>3</td>
+				<td>Nabeel</td>
+			</tr>
+		</tbody>
+	</table>
+	<div>
+		<h2>List of Medias</h2>
+		<ol>
+			<li>
+				<img src="https://picsum.photos/id/123/200/300" alt="img" width="100px"/>
+			</li><br>
+			<li>
+				<video controls width="500px">
+					<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" />
+				</video>
+			</li><br>
+			<li>
+				<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls />
+			</li>
+		</ol>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
