--- a/main.html
+++ b/main.html
@@ -28,23 +28,21 @@
 				<td>Nabeel</td>
 			</tr>
 		</tbody>
-	</table>
-	<div>
-		<h2>List of Medias</h2>
-		<ol>
-			<li>
-				<img src="https://picsum.photos/id/123/200/300" alt="img" width="100px"/>
-			</li><br>
-			<li>
-				<video controls width="500px">
-					<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" />
-				</video>
-			</li><br>
-			<li>
-				<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls />
-			</li>
-		</ol>
-	</div>
+	</table><br>
+	List of medias
+	<ol>
+		<li>
+			<img src="https://picsum.photos/id/123/200/300" alt="img" width="100px"/>
+		</li><br>
+		<li>
+			<video controls width="500px">
+				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" />
+			</video>
+		</li><br>
+		<li>
+			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls />
+		</li>
+	</ol>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
